# recreate-otel-issue

./: .env  .gitignore  README.md  otel-collector-config.yaml  podman-compose.yml  pyproject.toml
issue/: accept_header_version_middleware.py  start.py  versioned_api_router.py
