[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recreate-otel-issue"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["splunk-opentelemetry~=2.4", "fastapi~=0.101", "uvicorn"]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
